adding google places autocomplete

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <![endif]-->
     <acme-navbar creation-date="main.creationDate"></acme-navbar>
     <div ui-view></div>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDQTpXj82d8UpCi97wzo_nKXL7nYrd4G70"></script>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
@@ -32,6 +33,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <script src="./assets/plugins/plugins.js"></script>
+
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
     <!-- inject:js -->
     <!-- js files will be automatically insert here -->
