--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -24,8 +24,8 @@
     <link rel="stylesheet" href="app/responsive.css">
     <link rel="stylesheet" href="app/style.css">
     <link rel="stylesheet" href="app/components/footer/footer.css">
-    <link rel="stylesheet" href="app/components/navbar/navbar.css">
     <link rel="stylesheet" href="app/components/malarkey/malarkey.css">
+    <link rel="stylesheet" href="app/components/navbar/navbar.css">
     <!-- endinject -->
     <!-- endbuild -->
   </head>
@@ -55,6 +55,7 @@
     <script src="../bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/ngmap/build/scripts/ng-map.js"></script>
+    <script src="../bower_components/angular-marquee/src/marquee.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="./assets/plugins/plugins.js"></script>
@@ -63,17 +64,19 @@
     <!-- inject:js -->
     <script src="app/index.module.js"></script>
     <script src="app/components/webDevTec/webDevTec.service.js"></script>
+    <script src="app/components/navbar/navbar.directive.js"></script>
     <script src="app/components/malarkey/malarkey.directive.js"></script>
     <script src="app/components/githubContributor/githubContributor.service.js"></script>
-    <script src="app/components/navbar/navbar.directive.js"></script>
     <script src="app/components/footer/footer.directive.js"></script>
-    <script src="app/testimonials/testimonials.controller.js"></script>
+    <script src="app/why/why.controller.js"></script>
+    <script src="app/testimonial/testimonial.controller.js"></script>
     <script src="app/pricing/pricing.controller.js"></script>
+    <script src="app/process/process.controller.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/how-it-works/works.controller.js"></script>
     <script src="app/faq/faq.controller.js"></script>
     <script src="app/contact/contact.controller.js"></script>
-    <script src="app/claim/claim.controller.js"></script>
+    <script src="app/business/business.controller.js"></script>
     <script src="app/about/about.controller.js"></script>
     <script src="app/index.run.js"></script>
     <script src="app/index.route.js"></script>
